mdmCeneveo/src/objects/Forecast_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_2_weeks_prior__c</fullName>
        <label>Forecast 2 weeks prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Variance_from_Previous_Week__c</fullName>
        <label>Forecast Variance from Previous Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>Forecasts History Tracking</relationshipLabel>
        <relationshipName>Forecasts_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_weeks_forecast__c</fullName>
        <label>Previous weeks forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecasts_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Forecast History Tracking</label>
    <nameField>
        <label>Forecast History Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasts History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>